[package]
name = "rustyhorde"
version = "0.1.0"
authors = ["Alex Hortin <hortinstein@gmail.com>"]

[dependencies]
term-painter = "0.2.3"
reqwest = "0.7.2"
serde_json = "1.0.2"

[lib]
name = "getcointicker"
path = "src/getcointicker.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'